2.0.4
	+ Bugfix: dhcp module never fail to save changes when a change
	  in network interface is done
	+ Use a select to choose the dynamic domains instead of adding
	  manually using a Text box
	+ Added support to add DNS reverse resolution for DHCP clients
	+ Added dynamicDNSDomains exposed method to be used by dns module
	+ Now it is possible to tweak DHCP configuration for an specific
	  host or range using /etc/ebox/dhcp/<hostname> or
	  /etc/ebox/dhcp/<range_name> configuration file
	+ Thin client options are now working for objects and ranges
	+ Fixed addresses are now managed by network objects
	+ Dynamic IP address leases now got the hostname from the DHCP
	  client, if given
2.0.3
	+ Define dhcpd paths using autotools for flexible use with
	  isc-dhcp-server (>4).
	+ Bugfix: MAC addresses are now parsed correctly in LogHelper
2.0.2
	+ DHCP init.d script is disabled when enabling the module
	+ Set default order for dashboard widgets
2.0.1
	+ Bugfix: Add to apparmor profile the bind keys file to read it to
	  make dynamic DNS feature work again
	+ Bugfix: Comply apparmor profile by setting pid file as
	  /var/run/dhcp3-server/dhcpd.pid
1.5.4
	+ Zentyal rebrand
1.5.3
	+ Added missing NetBIOS node type when setting the WINS server
1.5.2
	+ Improved usability using None search domain by default.
1.5.1
	+ Bugfix: DHCP log works now if the dhcp client sends a host name as
	  suggested
	+ Bugfix: Fixed address names must be valid domain names to enable
	  dynamic DNS feature.
1.4
	+ Bug fix: i18n
1.3.13
	+ Added WINS server configuration setting to DHCP common options,
	  you may use eBox as PDC or any other WINS server
	+ Added description optional field to fixed address table
	+ Added NTP server configuration setting to DHCP common options,
	  you may use eBox or any other NTP server
	+ Added Dynamic DNS update feature to set a domain for ranges and
	  a domain for fixed addresses when an IP address is leased. The